force-app/main/default/objects/ccrz__E_AttributeI18N__c/ccrz__E_AttributeI18N__c.object-meta.xml
<CustomObject>
    <description>Internationalization for Attributes</description>
    <label>CC AttributeI18N</label>
    <nameField>
        <label>CC AttributeI18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC AttributeI18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>