force-app/main/default/objects/ccrz__E_AttributeI18N__c/fields/ccrz__Attribute__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Attribute__c</fullName>
    <description>CC Attribute this I18N is related to</description>
    <label>CC Attribute</label>
    <referenceTo>ccrz__E_Attribute__c</referenceTo>
    <relationshipLabel>CC AttributeI18Ns</relationshipLabel>
    <relationshipName>AttributeI18Ns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>