force-app/main/default/objects/ccrz__E_AttributeI18N__c/fields/ccrz__AttributeI18NExtID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AttributeI18NExtID__c</fullName>
    <externalId>true</externalId>
    <label>AttributeI18N Ext ID</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>