force-app/main/default/objects/ccrz__E_AttributeI18N__c/fields/ccrz__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayName__c</fullName>
    <description>The localized Attribute Display Name.</description>
    <label>Display Name</label>
    <length>1024</length>
    <type>Html</type>
</CustomField>